tests/ui/parser/attribute/attr-bad-meta-4.stderr
error: expected unsuffixed literal, found `-`
  --> $DIR/attr-bad-meta-4.rs:12:17
   |
LL | #[cfg(feature = -1)]
   |                 ^

error: expected unsuffixed literal, found `meta` metavariable
  --> $DIR/attr-bad-meta-4.rs:3:15
   |
LL |         #[cfg($attr_item)]
   |               ^^^^^^^^^^
...
LL | mac!(an(arbitrary token stream));
   | -------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected unsuffixed literal, found `meta` metavariable
  --> $DIR/attr-bad-meta-4.rs:3:15
   |
LL |         #[cfg($attr_item)]
   |               ^^^^^^^^^^
...
LL | mac!(an(arbitrary token stream));
   | -------------------------------- in this macro invocation
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
   = note: this error originates in the macro `mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected unsuffixed literal, found `-`
  --> $DIR/attr-bad-meta-4.rs:12:17
   |
LL | #[cfg(feature = -1)]
   |                 ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

